# frame-ocr

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  release.yml
src/: main.rs  models.rs
